--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,24 @@
 .container {
-    margin: 0 auto;
-    max-width: 1280px;
-    width: 90%;
+	margin: 0 auto;
+	max-width: 1280px;
+	width: 90%;
 }
 
 @media only screen and (min-width: 601px) {
-    .container {
-        width: 85%;
-    }
+	.container {
+		width: 85%;
+	}
 }
 
 @media only screen and (min-width: 993px) {
-    .container {
-        width: 70%;
-    }
+	.container {
+		width: 70%;
+	}
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	/* display: none; <- Crashes Chrome on hover */
+	-webkit-appearance: none;
+	margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
 }
