--- a/src/containers/ImageUploader/style.css
+++ b/src/containers/ImageUploader/style.css
@@ -1,3 +1,20 @@
 .upload-tips{
   margin: 15px !important;
 }
+
+.image-not-found{
+  display: block !important;
+}
+.file-input{
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+    display: block;
+}
+
+.hidden{
+  display: none !important;
+}
