--- a/src/components/MorphologicalFiltering/style.css
+++ b/src/components/MorphologicalFiltering/style.css
@@ -12,6 +12,9 @@
     display: flex;
     justify-content: center;
 }
+.container .matrizPersonalizada{
+    width: -webkit-fill-available;
+}
 .container .grid .column .imagem{
     height: 100px;
     width: 100px;
